bug fix: Fixed UI issue when on landscape mode on mobile devices

--- a/static/mysite_forum/css/forum.css
+++ b/static/mysite_forum/css/forum.css
@@ -65,12 +65,7 @@ img {
     }
 
     .mobile-portrait {
-        display: unset !important;
-    }
-
-    .container {
-        margin: unset !important;
-        max-width: unset !important;
+        display: block !important;
     }
 }
 
